# homebound

./: .env.example  .gitignore  Makefile  Mission.md  README.md  activate.sh  homebound.db  pyproject.toml
backend/: .coveragerc  .env.example  Dockerfile  MIGRATIONS.md  README.md  add_activity_type.py  add_location_coords.py  add_location_coords_sqlite.py  add_missing_columns.py  add_saved_contacts.py  alembic.ini  fix_database.sql  fix_database_schema.py  fix_null_saved_contacts.sql  homebound.db  init_db.py  main.py  migrate_database.py  migrate_postgres.py  migrate_prod.py  pyproject.toml  render.yaml  requirements.txt  test_all_features.py
backend/alembic/: env.py
backend/alembic/versions/: 08febd5e9e09_add_timezone_to_trips.py  a1b2c3d4e5f6_add_processed_webhooks_and_indexes.py  a7818caa48a6_new_tables.py  ae8f29841bb8_fix_schema_add_missing_columns.py  b2c3d4e5f6a7_add_notification_logs.py  b2c3d4e5f6g7_add_pending_webhooks.py  c3d4e5f6a7b8_add_notification_preferences.py  c3d4e5f6g7h8_add_failed_webhooks.py  d4e5f6a7b8c9_add_trip_notification_settings.py  d8f2a1b3c4e5_remove_phone_require_email_contacts.py  e1f2a3b4c5d6_add_notification_tracking.py  e5f6a7b8c9d0_add_start_location_to_trips.py  f1e33823bb97_initial_migration_with_all_tables.py  f6a7b8c9d0e1_add_per_time_timezone_to_trips.py  fc7f7cf2e99e_add_apple_user_id_to_users.py  g7b8c9d0e1f2_add_notify_self_to_trips.py  h8c9d0e1f2g3_add_friends_tables.py  i9d0e1f2g3h4_add_trip_safety_contacts.py  j0e1f2g3h4i5_make_contacts_nullable.py  k1f2g3h4i5j6_add_live_activity_transitions.py  l2g3h4i5j6k7_add_live_activity_tokens.py  m3h4i5j6k7l8_add_friend_visibility_settings.py  n4i5j6k7l8m9_add_live_locations.py  o5j6k7l8m9n0_add_update_requests.py  p6k7l8m9n0o1_add_friend_share_achievements.py  q7l8m9n0o1p2_permanent_friend_invites.py  r8m9n0o1p2q3_add_mini_profile_privacy.py  s9n0o1p2q3r4_add_group_trips.py  t0o1p2q3r4s5_add_participant_trip_contacts.py  u1p2q3r4s5t6_add_participant_last_checkin_reminder.py  v1w2x3y4z5a6_add_friend_to_participant_contacts.py  w2x3y4z5a6b7_add_subscriptions.py  x3y4z5a6b7c8_add_is_trial_to_subscriptions.py  y4z5a6b7c8d9_add_custom_messages_to_trips.py  z5a6b7c8d9e0_add_participant_share_location.py
backend/app/: main.py  models.py  schemas.py
backend/app/core/: config.py  db.py  security.py
backend/app/messaging/: apns.py  resend_backend.py  twilio_backend.py
backend/app/routes/: auth.py  contacts.py  devices.py  owner.py  plans.py  public.py  web.py  well_known.py
backend/app/services/: auth.py  notifications.py  plans.py  scheduler.py  tokens.py
backend/app/templates/: base.html  owner_create.html  owner_plan.html  public_done.html
backend/homebound_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: README.md  add_saved_contacts.sql  add_saved_contacts_production.py
backend/scripts/: request_apple_test_notification.py  seed_demo_data.py
backend/src/: config.py  database.py  main.py  models.py  security.py
backend/src/api/: activities.py  admin.py  apple_auth.py  auth.py  auth_endpoints.py  checkin.py  contacts.py  devices.py  friends.py  invite_page.py  live_activity_tokens.py  owner.py  participants.py  plans.py  profile.py  public.py  server.py  stats.py  subscriptions.py  trips.py  web.py  well_known.py
backend/src/messaging/: apns.py  resend_backend.py  twilio_backend.py
backend/src/scripts/: broadcast.py  direct.py
backend/src/services/: app_store.py  auth.py  devices.py  geocoding.py  notifications.py  scheduler.py  subscription_check.py  tokens.py
backend/static/.well-known/: apple-app-site-association
backend/tests/: test_health.py
backend/tests/api/: test_activities.py  test_apple_auth.py  test_auth.py  test_auth_security.py  test_checkin.py  test_contacts.py  test_data_isolation.py  (+11 more)
(+179 files in other folders)
