[project]
name = "homebound-backend"
version = "0.1.0"
description = "Homebound API (FastAPI + SQLAlchemy)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "aiosqlite>=0.19",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "email-validator>=2.1",
  "python-jose[cryptography]>=3.3",
  "PyJWT[crypto]>=2.8",
  "httpx[http2]>=0.27",
  "certifi>=2024.0.0",
  "apscheduler>=3.10",
  "twilio>=9.0",
  "resend>=2.0",
  "python-dotenv>=1.0",
  "psycopg2-binary>=2.9",
  "pytz>=2024.1"
]

[project.optional-dependencies]
dev = [
  "types-pytz",
  "types-requests",
  "ruff>=0.5",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# SQLAlchemy Row types cause many false positives
# arg-type for to_iso8601 returning Optional but TripResponse expecting str
disable_error_code = ["index", "union-attr", "import-untyped", "arg-type"]

[tool.uv]
managed = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Migration files contain long JSON data that shouldn't be reformatted
"alembic/versions/*.py" = ["E501"]
# Test files contain SQL fixtures and test data that's more readable as-is
"tests/**/*.py" = ["E501"]
# Services contain many log statements and SQL queries better kept on one line
"src/services/*.py" = ["E501"]
"src/messaging/*.py" = ["E501"]
